Attempted to fix export. Still not working

--- a/posts/202002_new.md
+++ b/posts/202002_new.md
@@ -4,6 +4,6 @@ pubdate: 2020/02/18
 image: star.png
 ---
 
-This new website will feature the research, thoughts and notes of <a href="./about">Jens Egholm Pedersen</a>
+This new website will feature the research, thoughts and notes of <a href="about">Jens Egholm Pedersen</a>
 
 Welcome!
