Corrected snufa title

--- a/posts/202111_snufa.md
+++ b/posts/202111_snufa.md
@@ -1,5 +1,5 @@
 ---
-title: Norse: A library for gradient-based learning in Spiking Neural Networks
+title: Talk at the SNUFA workshop about Norse and learning in biology
 pubdate: 2021/11/04
 image: norse.png
 ---
