Fixed talk picture and improved summaries

--- a/content/en/posts/talks/202212_half.md
+++ b/content/en/posts/talks/202212_half.md
@@ -6,9 +6,6 @@ featured_image: img/ncs.png
 
 I recently held a seminar demonstrating 50% completion of my PhD thesis on <i>Neuromorphic computing for closed-loop systems</i>.
 
-The ~60 minute presentation (including Q&A) can be found below.
+The ~60 minute presentation (including Q&A) can be found here:
 
-<!-- <iframe src="https://kth-my.sharepoint.com/personal/jeped_ug_kth_se/_layouts/15/embed.aspx?UniqueId=cd1f57c6-4e35-44d9-940b-1439725c1dec&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="853" height="480" frameborder="0" scrolling="no" allowfullscreen title="2212_50.mp4"></iframe> -->
-<video width="800" height="640" controls>
-    <source src="https://cloud.jepedersen.dk/s/aiJXB9R67WaSia5/download/2212_50_phd.mp4" type="video/mp4">
-</video>
+<a href="https://cloud.jepedersen.dk/s/W3DPjTewgtGWiBr">https://cloud.jepedersen.dk/s/W3DPjTewgtGWiBr</a>
