Cleaned and added pages for code and research

--- a/content/en/posts/20240512_dataset.md
+++ b/content/en/posts/20240512_dataset.md
@@ -6,7 +6,7 @@ featured_image: img/affine.gif
 
 {{< figure src="/img/affine.gif" alt="Event based data moving" caption="The event based dataset can control arbitrary affine transformations and outputs very sparse data, perfect for training event-driven neural network models." >}}
 
-We released [a library for generating event-based vision data](https://github.com/ncskth/event-generator) with a host of features.
+We released [a library for generating event-based vision data](https://github.com/ncskth/gerd) with a host of features.
 Our work can be used to generate data for training and testing event-based vision algorithms, under controlled conditions, and with a high degree of flexibility.
 
 Specifically, we render moving shapes (by default we provide squares, triangles, and circles) in a 2-dimensional grid.
@@ -23,6 +23,6 @@ Specifically, you configure:
 * The shapes you want to render
 * And much more...
 
-Please refer to the GitHub repository for more information: https://github.com/ncskth/event-generator
+Please refer to the GitHub repository for more information: https://github.com/ncskth/gerd
 
-For further examples, see our paper on spatio-temporal covariance properties at [https://github.com/jegp/nrp](https://github.com/jegp/nrf).
+For further examples, see our paper on spatio-temporal covariance properties at [https://github.com/jegp/nrf](https://github.com/jegp/nrf).
