--- a/content/en/posts/202510_nrf.md
+++ b/content/en/posts/202510_nrf.md
@@ -123,7 +123,7 @@ The authors gratefully acknowledge support from the EC Horizon 2020 Framework
 Programme under Grant Agreements 785907 and 945539 (HBP), the Swedish Research Council under contracts 2022-02969 and 2022-06725, and the Danish National Research Foundation grant number P1.
 
 ## Citation
-Our work is available as a preprint at [https://www.nature.com/articles/s41467-025-63493-0](https://www.nature.com/articles/s41467-025-63493-0) and can be cited as follows
+Our work is freely available [https://www.nature.com/articles/s41467-025-63493-0](https://www.nature.com/articles/s41467-025-63493-0) and can be cited as follows
 ```bibtex
 @misc{pedersen2025covariant,
     title={Covariant spatio-temporal receptive fields for spiking neural networks}, 
